# blastradius

./: .env.example  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  RUNNING.md  SPEC.md  blastradius-history.json
.design-bundle/: README.md  gen_page.py  marquee_investigate.js
.design-bundle/project/: Blast Radius.html  app.jsx  dashboard.jsx  data.js  narrative.jsx  retro.jsx  viz.jsx
.github/workflows/: release.yml
docs/: RELEASING.md  agent-beacon-integration.md  claude-code-security-model.md
npm/: package.json
npm/test/: shim.test.js
src/: cli.rs  context.rs  finding.rs  lib.rs  main.rs  runner.rs  severity.rs
src/analyze/: mod.rs  openai.rs
src/compare/: diff.rs  mod.rs  worktree.rs
src/dashboard/: impact.rs  mod.rs  page.rs
src/probes/: aws.rs  browser_stores.rs  claude_surface.rs  deferred_exec_sinks.rs  dotenv.rs  egress.rs  egress_mediation.rs  env.rs  env_scrub.rs  git_config.rs  git_credentials.rs  git_write.rs  github.rs  lateral_secrets.rs  local_services.rs  mod.rs  network_config.rs  privilege.rs  privileged_reach.rs  process_introspect.rs  registry.rs  repl_history.rs  sandbox_detect.rs  sandbox_integrity.rs  sandbox_posture.rs  sandbox_reach.rs  shell_history.rs  sibling_repos.rs  ssh.rs  ssh_agent.rs  store.rs  write_reach.rs
src/report/: json.rs  markdown.rs  mod.rs  redaction.rs  sanitize.rs  terminal.rs
src/session/: classify.rs  conformance.rs  history.rs  mod.rs  normalize.rs  report.rs  retro.rs  score.rs  toxic_combinations.rs  trace.rs
src/session/discovery/: extract.rs  locate.rs  mod.rs  registry.rs
src/session/discovery/parse/: jsonl_beacon.rs  jsonl_claude.rs  jsonl_codex.rs  mod.rs
src/util/: command.rs  fs_budget.rs  fsperm.rs  git.rs  mod.rs  net.rs  parse.rs  paths.rs  progress.rs  read.rs  time.rs
tests/: egress.rs  extra_probes.rs  new_probes.rs  performance.rs  probes.rs  redaction.rs  report_safety.rs  report_write.rs  vetted_probes.rs  worktree.rs
tests/common/: mod.rs
traces/: benign.json  risky.json
transcripts/: 2026-06-13-160648-fetch-this-design-file-read-its-readme-and-impl.txt  2026-06-13-160705-please-take-a-look-at-httpsgithubcomasymptot.txt  2026-06-13-163105-local-command-caveatcaveat-the-messages-below.txt
