[package]
name = "blastradius"
version = "0.1.0"
edition = "2021"
description = "Local reachability audit for coding-agent environments"
license = "MIT"
repository = "https://github.com/amlalabs/blastradius"

[lib]
name = "blastradius"
path = "src/lib.rs"

[[bin]]
name = "blastradius"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
walkdir = "2"
dirs = "5"
tempfile = "3"
anyhow = "1"
ctrlc = "3"
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
webpki-roots = "0.26"
# Opt-in AI analysis (`dashboard --ai`): a small blocking, rustls-based HTTP
# client. Only ever transmits the value-free finding inventory to OpenAI.
ureq = { version = "2", default-features = false, features = ["tls", "json"] }

[dev-dependencies]
tempfile = "3"

[features]
# Opt-in integration tests that touch the real network.
network-tests = []

[profile.release]
opt-level = "s"
lto = true
strip = true
