[package]
name = "blastradius"
version = "0.1.0"
edition = "2021"
description = "Local reachability audit for coding-agent environments"
authors = ["Amla Labs"]
license = "MIT"
repository = "https://github.com/amlalabs/blastradius"
homepage = "https://github.com/amlalabs/blastradius"

# `cargo binstall blastradius` reuses the same GitHub Release tarballs the npm
# shim downloads: asset `blastradius-<target>.tar.gz` with the binary at the
# archive root. No extra CI — same artifacts the release workflow already builds.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/blastradius-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[lib]
name = "blastradius"
path = "src/lib.rs"

[[bin]]
name = "blastradius"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
walkdir = "2"
# Deterministic, value-free hazard ids (§24.3.2 hazard_id = sha256(...)[..16]).
sha2 = "0.10"
dirs = "5"
tempfile = "3"
anyhow = "1"
ctrlc = "3"
# TLS for the always-on egress reachability probe (one handshake to 1.1.1.1:443).
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
webpki-roots = "0.26"
# Opt-in AI analysis (`dashboard --ai`): a small blocking, rustls-based HTTP
# client that transmits only the value-free finding inventory to OpenAI — never
# a secret value.
ureq = { version = "2", default-features = false, features = ["tls", "json"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
lto = true
strip = true
